@@ -31,5 +31,6 @@ void closeTab(GtkButton *button,pageStruct *page);
 void openDisk(GtkIconView *icon_view,GtkTreePath *tree_path,gpointer *userdata);
 void setPrefs(GtkWidget* widget,gpointer ptr);
 void doShutdown(GtkWidget* widget,gpointer data);
+gboolean buttonDownDisk(GtkTreeView *widget,GdkEventButton *event,gpointer *userdata);
 
 #endif
