@@ -39,10 +39,11 @@ struct	contextStruct
 {
 	pageStruct	*page;
 	GtkTreePath	*treepath;
+	GtkTreeView *tree;
 	unsigned	id;
 };
 
-enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTOPEN,CONTEXTDELETE,MAINFILENEW,MAINFILEPREFS,MAINFILEQUIT};
+enum	{CONTEXTNEWFILE=0,CONTEXTNEWFOLDER,CONTEXTOPEN,CONTEXTDELETE,CONTEXTDISKMOUNT,CONTEXTDISKUNMOUNT,CONTEXTDISKEJECT,MAINFILENEW,MAINFILEPREFS,MAINFILEQUIT};
 
 extern	menuDataStruct	menuData[];
 extern	contextStruct	**contextMenus;
